fix: refactor workspace, implement recursive folders, and fix execution language resolution